Fixed spacing

--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -21,7 +21,8 @@ nav {
 	
 	li {
 	  	display: inline;
-		padding: 5px 10px 0 10px;
+		padding: 5px 7.5px 0 7.5px;
+		margin: 0 3px;
 		border-top: 1px solid $dark-green;
 		border-left: 1px solid $dark-green;
 		border-right: 1px solid $dark-green;
